[package]
name = "icon-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32"
egui = "0.32"
image = { version = "0.25", features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "ico",
    "tiff",
    "webp",
] }
resvg = "0.45"
usvg = "0.45"
walkdir = "2.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5.0"
