[package]
name = "iconography"
version = "0.1.2"
edition = "2024"
license = "BSD-3-Clause"                                                                 # https://spdx.org/licenses/
authors = ["Elio Grieco <grieco@egx.com>"]
description = "A demo program to search for and load Linux icons in an egui/eframe app."
repository = "https://github.com/symplasma/iconography"
readme = "README.md"
keywords = ["linux", "desktop", "icons"]                                                 # free text, 5 keywords max
categories = ["command-line-utilities"]                                                  # https://crates.io/category_slugs
exclude = [".vscode/*", ".gitignore", ".aider.*", "design/*"]
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "iconography"
path = "src/main.rs"

[dependencies]
eframe = "0.32"
egui = "0.32"
image = { version = "0.25", features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "ico",
    "tiff",
    "webp",
] }
resvg = "0.45"
usvg = "0.45"
walkdir = "2.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5.0"
